--- a/skills.html
+++ b/skills.html
@@ -138,14 +138,15 @@
                 <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 50ms"><span class="text-accent">▹</span> React</li>
                 <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 100ms"><span class="text-accent">▹</span> Node.js</li>
                 <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 150ms"><span class="text-accent">▹</span> Deep Learning</li>
-                <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 200ms"><span class="text-accent">▹</span> Django</li>
-                <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 250ms"><span class="text-accent">▹</span> MySQL</li>
+                <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 200ms"><span class="text-accent">▹</span> Django Frameworks</li>
+                <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 250ms"><span class="text-accent">▹</span> Finetuning ML models</li>
               </ul>
                <ul class="space-y-3">
-                <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 300ms"><span class="text-accent">▹</span> AWS</li>
-                <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 350ms"><span class="text-accent">▹</span> Git</li>
+                <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 300ms"><span class="text-accent">▹</span> AWS Sagemaker</li>
+                <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 350ms"><span class="text-accent">▹</span> Git & GitHub</li>
                 <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 400ms"><span class="text-accent">▹</span> Java</li>
-                <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 450ms"><span class="text-accent">▹</span> NLP</li>
+                <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 400ms"><span
+class="text-accent">▹</span> NLP</li>
                 <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 500ms"><span class="text-accent">▹</span> Power BI</li>
                 <li class="flex items-center gap-2 font-mono text-slate" style="animation-delay: 550ms"><span class="text-accent">▹</span> C</li>
               </ul>
